[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/space_flying_bodies/SpaceFlyingBody.gd" type="Script" id=1]
[ext_resource path="res://actors/particle.png" type="Texture" id=2]
[ext_resource path="res://objects/DragArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/space_flying_bodies/comet/colliding.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 35.2124

[sub_resource type="Curve" id=2]
max_value = 1.5
_data = [ Vector2( 0.254996, 1 ), 0.0, 3.41493, 0, 0, Vector2( 0.993856, 1.27572 ), 0.373164, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.402703, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="SpaceFlyingBody" type="KinematicBody2D" groups=[
"flying_body",
]]
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Node2D" parent="."]
z_index = 1

[node name="Tail" type="CPUParticles2D" parent="Sprite"]
show_behind_parent = true
rotation = 3.14159
amount = 5
local_coords = false
texture = ExtResource( 2 )
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.42
linear_accel = 8.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Visibility" type="VisibilityNotifier2D" parent="Sprite"]
rect = Rect2( -200, -40, 200, 80 )

[node name="Core" type="CPUParticles2D" parent="Sprite"]
rotation = 3.14159
amount = 4
local_coords = false
texture = ExtResource( 2 )
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.42
linear_accel = 8.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="DragArea" parent="." instance=ExtResource( 3 )]

[node name="CollidingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"
[connection signal="collided" from="." to="." method="_on_collided"]
[connection signal="screen_exited" from="Sprite/Visibility" to="." method="queue_free"]
[connection signal="dragged" from="DragArea" to="." method="_on_DragArea_dragged"]
[connection signal="dragged" from="DragArea" to="." method="fly"]
[connection signal="dragging" from="DragArea" to="Shape" method="set_disabled" binds= [ true ]]
[connection signal="dragging" from="DragArea" to="." method="stop"]
